<resources>
    <string name="app_name">TimeUtils</string>
    <string name="tag_clock">Clock</string>
    <string name="tag_chrono">Stopwatch</string>
    <string name="tag_timer">Timer</string>
    <string name="tag_alarms">Alarms\n\nNot\nImplemented</string>
    <string name="back_to_home">Back to Home</string>
    <string name="timer_done">Timer Ended!</string>
    <string name="chrono_start">Start</string>
    <string name="chrono_resume">Resume</string>
    <string name="chrono_lap">Lap</string>
    <string name="chrono_stop">Stop</string>
    <string name="chrono_reset">Reset</string>
    <string name="chrono_pause">Pause</string>
    <string name="local_service_started">Background service started</string>
    <string name="local_service_stopped">Background service stopped</string>
    <string name="local_service_label">Service name</string>
    <string name="titleCalc">Base Date</string>
    <string name="subCalc">Delta</string>
    <string name="labelTime">Time:</string>
    <string name="labelDate">Date:</string>
    <string name="labelCalcButton">Compute</string>
    <string name="tag_calc">Calculator</string>
    <string name="calc_error">No Input</string>
</resources>
