<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_clock"
        style="@style/ColoredButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/tag_clock"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_chrono"
        app:layout_constraintEnd_toStartOf="@+id/button_calc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_calc"
        style="@style/ColoredButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/tag_calc"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_clock"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_chrono"
        style="@style/ColoredButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/tag_chrono"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clock" />

    <Button
        android:id="@+id/button_timer"
        style="@style/ColoredButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/tag_timer"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_chrono"
        app:layout_constraintTop_toBottomOf="@+id/button_calc" />


</androidx.constraintlayout.widget.ConstraintLayout>
