<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".chrono.ChronoActivity">

    <Button
        android:id="@+id/chrono_exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/displayChrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="00.000"
        android:textSize="65sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/lap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chrono_lap"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/chrono_exit_button"
        app:layout_constraintEnd_toStartOf="@+id/start"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayChrono"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chrono_start"
        app:layout_constraintBottom_toTopOf="@+id/chrono_exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayChrono"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chrono_pause"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/chrono_exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayChrono"
        app:layout_constraintVertical_bias="0.6" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chrono_reset"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/chrono_exit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/start"
        app:layout_constraintTop_toBottomOf="@+id/displayChrono"
        app:layout_constraintVertical_bias="0.6" />

    <ScrollView
        android:id="@+id/scroll_lap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        app:layout_constraintBottom_toTopOf="@+id/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayChrono"
        app:layout_constraintVertical_bias="0.76">

        <TextView
            android:id="@+id/displayLap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>